[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["for shell <fromShell@paas.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
default = true
url = "http://mirrors.tencentyun.com/pypi/simple/"
